
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 APR 23b
  * in model/chem/_NH3_Plasma_19s/arakoni2007v3.c
    - fixed bugs
  * in model/chem/_NH3_Plasma_32s/arakoni2007v3.c
    - fixed bugs


2024 APR 23a
  * in model/chem
    - renamed model/chem/_NH3_Plasma_10s/ to model/chem/_NH3_Plasma_32s/
  * in model/chem
    - added _NH3_Plasma_19s
  * in model/chem/_NH3_Plasma_32s/chem.c
    - added arakoni2007v3 model
  * in model/chem/_NH3_Plasma_32s
    - added arakoni2007v3.c
    
  
2024 APR 22c
  * in model/share/transport_share.c
    - added _mueN_H2O() and _mueN_C2H4()
  * in model/thermo/_generic/electronimpact.c
    - added species H2O and C2H4
    - added  _EoverN_from_Te_H2O_Triniti() and _Te_from_EoverN_H2O_Triniti(),
      _Te_from_EoverN_C2H4_Morgan(), _EoverN_from_Te_C2H4_Morgan()
  * in model/thermo/doc/electronimpact.tex
    - added documentation for C2H4 and H2O
  * in model/transport/doc/report.tex
    - added documentation for C2H4 and H2O
    

2024 APR 22b
  * in model/chem/_NH3_Plasma_10s/*.c and model/chem/_NH3_Plasma_10s/*.h
    - got rid of  find_Qchemave*
  

2024 APR 22a
  * in model/chem/_NH3_Plasma_10s/chem.c
    - added arakoni2007omprakas solver
  * in model/chem/_NH3_Plasma_10s
    - added arakoni2007omprakas.c and arakoni2007omprakas.h
  

2024 APR 19a
  * in model/chem/_NH3_Plasma_10s/arakoni2007v2.c
    - added averagedrates to reactions 41-50


2024 APR 18a
  * in model/chem/_NH3_Plasma_10s
    - added arakoni2007v2.c and arakoni2007v2.h
  * in model/chem/_NH3_Plasma_10s/chem.c
    - added arakoni2007v2 chemical solver
    

2024 APR 16a
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - renamed find_dSe_dU_transport_Qe to find_dSe_dU_transport_Parent2024