@@ -29,8 +29,8 @@ optionP  H2_Cs_Air_Plasma_15s
 optionP  H2_He_CH4_Plasma_13s
 option   N2_Plasma_4s
 option   NH3_N2_2s_0r
-optionP   NH3_Plasma_19s
 optionP   NH3_Plasma_32s
+optionP   NH3_Plasma_21s
 optionP   NH3_Plasma_34s
 help     A number followed by "s" denotes the number of species within the chemical model while a number followed by "r" denotes the number of reactions. The chemical models that include charged species are denoted by "plasma".  
 END
