@@ -39,7 +39,7 @@ cleanall:
 	( cd _H2_He_CH4_Plasma_13s ; make cleanall )
 	( cd _NH3_N2_2s_0r ; make cleanall )
 	( cd _NH3_Plasma_32s ; make cleanall )
-	( cd _NH3_Plasma_19s ; make cleanall )
+	( cd _NH3_Plasma_21s ; make cleanall )
 	( cd _NH3_Plasma_34s ; make cleanall )
 
 
